--- a/index.html
+++ b/index.html
@@ -1,86 +1,105 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
-    <link rel="stylesheet" href="css/app.css">
+  <meta charset="utf-8">
+  <title>Matching Game</title>
+  <meta name="description" content="">
+  <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+  <link rel="stylesheet" href="css/app.css">
 </head>
+
 <body>
-
-    <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
-
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
-
-        	<span class="moves">3</span> Moves
-
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
-
-        <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-        </ul>
+  <div id="myModal" class="modal">
+    <div class="gameStats">
+      <span>
+      <p class="modalTextpara para1-gameover">Congratulations! you won!</p>
+      <p class="modalTextpara para2-gameover">With 17 moves and 1 stars</p>
+      <p class="modalTextpara para2-gameover">Woooooooooohooooooooo!!</p>
+      <input type="button" id="play-again" class="play-again" value="Play Again">
+    </span>
     </div>
+  </div>
+  <div class="container">
+    <header>
+      <h1>Matching Game</h1>
+    </header>
+    <section class="score-panel">
+      <ul class="stars">
+        <li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
+        <li><i class="fa fa-star"></i></li>
+      </ul>
 
-    <script src="js/app.js"></script>
+      <span class="moves">0</span> Moves
+
+      <div class="restart">
+        <i class="fa fa-repeat"></i>
+      </div>
+    </section>
+    <section class="main">
+      <ul class="deck">
+        <li class="card">
+          <i class="fa fa-diamond"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-paper-plane-o"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-anchor"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bolt"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-cube"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-anchor"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-leaf"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bicycle"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-diamond"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bomb"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-leaf"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bomb"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bolt"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-bicycle"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-paper-plane-o"></i>
+        </li>
+        <li class="card">
+          <i class="fa fa-cube"></i>
+        </li>
+      </ul>
+      <section class="aside">
+        <i class="fa fa-hourglass"></i>
+        <p class="timeElapsedLbl">Time Elapsed</p>
+        <p class="timeElapsed">0 seconds</p>
+      </section>
+    </section>
+  </div>
+
+  <script src="js/app.js"></script>
 </body>
+
 </html>
